[gd_scene load_steps=5 format=3 uid="uid://cglvoh5mvwsml"]

[ext_resource type="Theme" uid="uid://qh5hw5je4dm8" path="res://assets/themes/menu1_theme.tres" id="1_5x3uv"]
[ext_resource type="Script" uid="uid://cxl7n3ncw3hn2" path="res://scenes/menus/character_creation/character_creation.gd" id="1_heq6y"]
[ext_resource type="AudioStream" uid="uid://buel5eym1ostr" path="res://assets/sounds/Ancient_Game_Metal_Bolt_or_Screw_Drop_1.ogg" id="2_3gb1l"]
[ext_resource type="AudioStream" uid="uid://bx1hw08fg02ow" path="res://assets/sounds/Button_4.ogg" id="3_k05cp"]

[node name="CharacterCreation" type="CanvasLayer"]
script = ExtResource("1_heq6y")

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_5x3uv")

[node name="MarginContainer" type="MarginContainer" parent="Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Menu/MarginContainer"]
layout_mode = 2

[node name="Panel_Title" type="Panel" parent="Menu/MarginContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="RichTextLabel" type="RichTextLabel" parent="Menu/MarginContainer/PanelContainer/Panel_Title"]
layout_mode = 0
offset_left = -2.0
offset_top = 9.0
offset_right = 733.0
offset_bottom = 53.0
text = "Character Creation"
horizontal_alignment = 1

[node name="Panel_Header" type="Panel" parent="Menu/MarginContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="Menu/MarginContainer/PanelContainer/Panel_Header"]
layout_mode = 0
offset_left = 52.0
offset_top = 73.0
offset_right = 110.0
offset_bottom = 101.0
text = "Name"

[node name="LineEdit" type="LineEdit" parent="Menu/MarginContainer/PanelContainer/Panel_Header"]
layout_mode = 0
offset_left = 42.0
offset_top = 100.0
offset_right = 275.0
offset_bottom = 136.0
max_length = 20

[node name="Label2" type="Label" parent="Menu/MarginContainer/PanelContainer/Panel_Header"]
layout_mode = 0
offset_left = 379.0
offset_top = 73.0
offset_right = 429.0
offset_bottom = 101.0
text = "Class"

[node name="OptionButton" type="OptionButton" parent="Menu/MarginContainer/PanelContainer/Panel_Header"]
layout_mode = 0
offset_left = 370.0
offset_top = 100.0
offset_right = 561.0
offset_bottom = 136.0
selected = 0
item_count = 4
popup/item_0/text = "Warrior"
popup/item_0/id = 0
popup/item_1/text = "Wizard"
popup/item_1/id = 1
popup/item_2/text = "Thief"
popup/item_2/id = 2
popup/item_3/text = "Ranger"
popup/item_3/id = 3

[node name="Panel_Stats" type="Panel" parent="Menu/MarginContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="GridContainer" type="GridContainer" parent="Menu/MarginContainer/PanelContainer/Panel_Stats"]
layout_mode = 0
offset_left = 43.0
offset_top = -73.0
offset_right = 569.0
offset_bottom = 92.0
columns = 7

[node name="lblStr" type="Label" parent="Menu/MarginContainer/PanelContainer/Panel_Stats/GridContainer"]
layout_mode = 2
text = "Strength: "

[node name="lblStrValue" type="Label" parent="Menu/MarginContainer/PanelContainer/Panel_Stats/GridContainer"]
layout_mode = 2
text = "12 "

[node name="lblStrMod" type="Label" parent="Menu/MarginContainer/PanelContainer/Panel_Stats/GridContainer"]
layout_mode = 2
text = "+2 "

[node name="Control_Separator" type="Control" parent="Menu/MarginContainer/PanelContainer/Panel_Stats/GridContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="lblDex" type="Label" parent="Menu/MarginContainer/PanelContainer/Panel_Stats/GridContainer"]
layout_mode = 2
text = "Dexterity: "

[node name="lblDexValue" type="Label" parent="Menu/MarginContainer/PanelContainer/Panel_Stats/GridContainer"]
layout_mode = 2
text = "12 "

[node name="lblDexMod" type="Label" parent="Menu/MarginContainer/PanelContainer/Panel_Stats/GridContainer"]
layout_mode = 2
text = "+2 "

[node name="lblCon" type="Label" parent="Menu/MarginContainer/PanelContainer/Panel_Stats/GridContainer"]
layout_mode = 2
text = "Constitution: "

[node name="lblConValue" type="Label" parent="Menu/MarginContainer/PanelContainer/Panel_Stats/GridContainer"]
layout_mode = 2
text = "12 "

[node name="lblConMod" type="Label" parent="Menu/MarginContainer/PanelContainer/Panel_Stats/GridContainer"]
layout_mode = 2
text = "+2 "

[node name="Control_Separator2" type="Control" parent="Menu/MarginContainer/PanelContainer/Panel_Stats/GridContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="lblInt" type="Label" parent="Menu/MarginContainer/PanelContainer/Panel_Stats/GridContainer"]
layout_mode = 2
text = "Intelligence: "

[node name="lblIntValue" type="Label" parent="Menu/MarginContainer/PanelContainer/Panel_Stats/GridContainer"]
layout_mode = 2
text = "12 "

[node name="lblIntMod" type="Label" parent="Menu/MarginContainer/PanelContainer/Panel_Stats/GridContainer"]
layout_mode = 2
text = "+2 "

[node name="lblWis" type="Label" parent="Menu/MarginContainer/PanelContainer/Panel_Stats/GridContainer"]
layout_mode = 2
text = "Wisdom: "

[node name="lblWisValue" type="Label" parent="Menu/MarginContainer/PanelContainer/Panel_Stats/GridContainer"]
layout_mode = 2
text = "12 "

[node name="lblWisMod" type="Label" parent="Menu/MarginContainer/PanelContainer/Panel_Stats/GridContainer"]
layout_mode = 2
text = "+2 "

[node name="Control_Separator3" type="Control" parent="Menu/MarginContainer/PanelContainer/Panel_Stats/GridContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="lblChar" type="Label" parent="Menu/MarginContainer/PanelContainer/Panel_Stats/GridContainer"]
layout_mode = 2
text = "Charisma: "

[node name="lblCharValue" type="Label" parent="Menu/MarginContainer/PanelContainer/Panel_Stats/GridContainer"]
layout_mode = 2
text = "12 "

[node name="lblCharMod" type="Label" parent="Menu/MarginContainer/PanelContainer/Panel_Stats/GridContainer"]
layout_mode = 2
text = "+2 "

[node name="btnReroll" type="Button" parent="Menu/MarginContainer/PanelContainer/Panel_Stats"]
layout_mode = 0
offset_left = 18.0
offset_top = 70.0
offset_right = 572.0
offset_bottom = 104.0
text = "Re-RollStats"

[node name="btnSave" type="Button" parent="Menu/MarginContainer/PanelContainer/Panel_Stats"]
layout_mode = 0
offset_left = 646.0
offset_top = 227.0
offset_right = 720.0
offset_bottom = 270.0
text = "Save"

[node name="AncientGameMetalBoltOrScrewDrop1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_3gb1l")
bus = &"SFX"

[node name="Button4" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_k05cp")
bus = &"SFX"
